// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Qwik Todo 1`] = `
Object {
  "files": Array [
    Object {
      "contents": "import { injectMethod, QRL, h } from \\"@builder.io/qwik\\";
import { TodoComponent } from \\"./Todo_component.js\\";

import { TodosState as todosState } from \\"../TodosState/public.js\\";

export default injectMethod(TodoComponent, function (this: TodoComponent) {
  return (
    <li
      class={\`\${this.todo.completed ? \\"completed\\" : \\"\\"} \${
        this.editing ? \\"editing\\" : \\"\\"
      }\`}
    >
      <div class=\\"view\\">
        <input
          type=\\"checkbox\\"
          class=\\"toggle\\"
          checked={this.todo.completed}
          on:click={QRL\`ui:/Todo_onInputClick\`}
        />

        <label on:dblclick={QRL\`ui:/Todo_onLabelDblClick\`}>
          {this.todo.text}
        </label>

        <button class=\\"destroy\\" on:click={QRL\`ui:/Todo_onButtonClick\`}></button>
      </div>

      {this.editing ? (
        <>
          <input
            class=\\"edit\\"
            value={this.todo.text}
            on:blur={QRL\`ui:/Todo_onInput2Blur\`}
            on:keyup={QRL\`ui:/Todo_onInput2KeyUp\`}
          />
        </>
      ) : undefined}
    </li>
  );
});
",
      "path": "Todo_template.tsx",
    },
    Object {
      "contents": "import { jsxDeclareComponent, QRL } from \\"@builder.io/qwik\\";

export const Todo = jsxDeclareComponent(QRL\`ui:/Todo_template\`, \\"todo\\");
",
      "path": "Todo.ts",
    },
    Object {
      "contents": "import { Component, QRL } from \\"@builder.io/qwik\\";

export class TodoComponent extends Component<any, any> {
  static $templateQRL = \\"ui:/Todo_template\\";

  editing = false;
  toggle() {
    this.todo.completed = !this.todo.completed;
  }

  $newState() {
    return {}; // TODO
  }
}
",
      "path": "Todo_component.ts",
    },
    Object {
      "contents": "import { injectEventHandler, provideEvent, markDirty } from \\"@builder.io/qwik\\";
import { TodoComponent } from \\"./Todo_component.js\\";

export default injectEventHandler(
  TodoComponent,
  provideEvent(),
  async function (this: TodoComponent, event: Event) {
    this.toggle();
  }
);
",
      "path": "Todo_onInputClick.ts",
    },
    Object {
      "contents": "import { injectEventHandler, provideEvent, markDirty } from \\"@builder.io/qwik\\";
import { TodoComponent } from \\"./Todo_component.js\\";

export default injectEventHandler(
  TodoComponent,
  provideEvent(),
  async function (this: TodoComponent, event: Event) {
    this.editing = true;
    markDirty(this);
  }
);
",
      "path": "Todo_onLabelDblClick.ts",
    },
    Object {
      "contents": "import { injectEventHandler, provideEvent, markDirty } from \\"@builder.io/qwik\\";
import { TodoComponent } from \\"./Todo_component.js\\";

export default injectEventHandler(
  TodoComponent,
  provideEvent(),
  async function (this: TodoComponent, event: Event) {
    todosState.todos.splice(todosState.todos.indexOf(this.todo));
  }
);
",
      "path": "Todo_onButtonClick.ts",
    },
    Object {
      "contents": "import { injectEventHandler, provideEvent, markDirty } from \\"@builder.io/qwik\\";
import { TodoComponent } from \\"./Todo_component.js\\";

export default injectEventHandler(
  TodoComponent,
  provideEvent(),
  async function (this: TodoComponent, event: Event) {
    this.editing = false;
    markDirty(this);
  }
);
",
      "path": "Todo_onInput2Blur.ts",
    },
    Object {
      "contents": "import { injectEventHandler, provideEvent, markDirty } from \\"@builder.io/qwik\\";
import { TodoComponent } from \\"./Todo_component.js\\";

export default injectEventHandler(
  TodoComponent,
  provideEvent(),
  async function (this: TodoComponent, event: Event) {
    this.todo.text = event.target.value;
  }
);
",
      "path": "Todo_onInput2KeyUp.ts",
    },
  ],
}
`;

exports[`Qwik Todo bundle 1`] = `
Object {
  "files": Array [
    Object {
      "contents": "import { injectMethod, QRL, h } from \\"@builder.io/qwik\\";
import { TodoComponent } from \\"./Todo_component.js\\";

import { TodosState as todosState } from \\"../TodosState/public.js\\";

export const template = injectMethod(
  TodoComponent,
  function (this: TodoComponent) {
    return (
      <li
        class={\`\${this.todo.completed ? \\"completed\\" : \\"\\"} \${
          this.editing ? \\"editing\\" : \\"\\"
        }\`}
      >
        <div class=\\"view\\">
          <input
            type=\\"checkbox\\"
            class=\\"toggle\\"
            checked={this.todo.completed}
            on:click={QRL\`ui:/Todo/bundle.onInputClick\`}
          />

          <label on:dblclick={QRL\`ui:/Todo/bundle.onLabelDblClick\`}>
            {this.todo.text}
          </label>

          <button
            class=\\"destroy\\"
            on:click={QRL\`ui:/Todo/bundle.onButtonClick\`}
          ></button>
        </div>

        {this.editing ? (
          <>
            <input
              class=\\"edit\\"
              value={this.todo.text}
              on:blur={QRL\`ui:/Todo/bundle.onInput2Blur\`}
              on:keyup={QRL\`ui:/Todo/bundle.onInput2KeyUp\`}
            />
          </>
        ) : undefined}
      </li>
    );
  }
);
",
      "path": "Todo_template.tsx",
    },
    Object {
      "contents": "import { jsxDeclareComponent, QRL } from \\"@builder.io/qwik\\";

export const Todo = jsxDeclareComponent(QRL\`ui:/Todo/bundle.template\`, \\"todo\\");
",
      "path": "Todo.ts",
    },
    Object {
      "contents": "import { Component, QRL } from \\"@builder.io/qwik\\";

export class TodoComponent extends Component<any, any> {
  static $templateQRL = \\"ui:/Todo/bundle.template\\";

  editing = false;
  toggle() {
    this.todo.completed = !this.todo.completed;
  }

  $newState() {
    return {}; // TODO
  }
}
",
      "path": "Todo_component.ts",
    },
    Object {
      "contents": "import { injectEventHandler, provideEvent, markDirty } from \\"@builder.io/qwik\\";
import { TodoComponent } from \\"./Todo_component.js\\";

export const onInputClick = injectEventHandler(
  TodoComponent,
  provideEvent(),
  async function (this: TodoComponent, event: Event) {
    this.toggle();
  }
);
",
      "path": "Todo_onInputClick.ts",
    },
    Object {
      "contents": "import { injectEventHandler, provideEvent, markDirty } from \\"@builder.io/qwik\\";
import { TodoComponent } from \\"./Todo_component.js\\";

export const onLabelDblClick = injectEventHandler(
  TodoComponent,
  provideEvent(),
  async function (this: TodoComponent, event: Event) {
    this.editing = true;
    markDirty(this);
  }
);
",
      "path": "Todo_onLabelDblClick.ts",
    },
    Object {
      "contents": "import { injectEventHandler, provideEvent, markDirty } from \\"@builder.io/qwik\\";
import { TodoComponent } from \\"./Todo_component.js\\";

export const onButtonClick = injectEventHandler(
  TodoComponent,
  provideEvent(),
  async function (this: TodoComponent, event: Event) {
    todosState.todos.splice(todosState.todos.indexOf(this.todo));
  }
);
",
      "path": "Todo_onButtonClick.ts",
    },
    Object {
      "contents": "import { injectEventHandler, provideEvent, markDirty } from \\"@builder.io/qwik\\";
import { TodoComponent } from \\"./Todo_component.js\\";

export const onInput2Blur = injectEventHandler(
  TodoComponent,
  provideEvent(),
  async function (this: TodoComponent, event: Event) {
    this.editing = false;
    markDirty(this);
  }
);
",
      "path": "Todo_onInput2Blur.ts",
    },
    Object {
      "contents": "import { injectEventHandler, provideEvent, markDirty } from \\"@builder.io/qwik\\";
import { TodoComponent } from \\"./Todo_component.js\\";

export const onInput2KeyUp = injectEventHandler(
  TodoComponent,
  provideEvent(),
  async function (this: TodoComponent, event: Event) {
    this.todo.text = event.target.value;
  }
);
",
      "path": "Todo_onInput2KeyUp.ts",
    },
    Object {
      "contents": "import { Component, injectMethod, h, QRL } from '@builder.io/qwik';

function _defineProperty(obj, key, value) { if (key in obj) { Object.defineProperty(obj, key, { value: value, enumerable: true, configurable: true, writable: true }); } else { obj[key] = value; } return obj; }
class TodoComponent extends Component {
  constructor(...args) {
    super(...args);

    _defineProperty(this, \\"editing\\", false);
  }

  toggle() {
    this.todo.completed = !this.todo.completed;
  }

  $newState() {
    return {}; // TODO
  }

}

_defineProperty(TodoComponent, \\"$templateQRL\\", \\"ui:/Todo/bundle.template\\");

const template = injectMethod(TodoComponent, function () {
  return h(\\"li\\", {
    class: \`\${this.todo.completed ? \\"completed\\" : \\"\\"} \${this.editing ? \\"editing\\" : \\"\\"}\`
  }, h(\\"div\\", {
    class: \\"view\\"
  }, h(\\"input\\", {
    type: \\"checkbox\\",
    class: \\"toggle\\",
    checked: this.todo.completed,
    \\"on:click\\": QRL\`ui:/Todo/bundle.onInputClick\`
  }), h(\\"label\\", {
    \\"on:dblclick\\": QRL\`ui:/Todo/bundle.onLabelDblClick\`
  }, this.todo.text), h(\\"button\\", {
    class: \\"destroy\\",
    \\"on:click\\": QRL\`ui:/Todo/bundle.onButtonClick\`
  })), this.editing ? h(null, null, h(\\"input\\", {
    class: \\"edit\\",
    value: this.todo.text,
    \\"on:blur\\": QRL\`ui:/Todo/bundle.onInput2Blur\`,
    \\"on:keyup\\": QRL\`ui:/Todo/bundle.onInput2KeyUp\`
  })) : undefined);
});

export { template };
",
      "path": "Todo/bundle.js",
    },
  ],
}
`;

exports[`Qwik Todos 1`] = `
Object {
  "files": Array [
    Object {
      "contents": "import { injectMethod, QRL, h } from \\"@builder.io/qwik\\";
import { TodosComponent } from \\"./Todos_component.js\\";

import { TodosState as todosState } from \\"../TodosState/public.js\\";
import { Todo } from \\"../Todo/public.js\\";

export default injectMethod(TodosComponent, function (this: TodosComponent) {
  return (
    <section class=\\"main\\">
      {todosState.todos.length ? (
        <>
          <input
            type=\\"checkbox\\"
            class=\\"toggle-all\\"
            checked={todosState.allCompleted}
            on:click={QRL\`ui:/Todos_onInputClick\`}
          />
        </>
      ) : undefined}

      <ul class=\\"todo-list\\">
        {todosState.todos?.map((todo) => (
          <>
            <Todo todo={todo}></Todo>
          </>
        ))}
      </ul>
    </section>
  );
});
",
      "path": "Todos_template.tsx",
    },
    Object {
      "contents": "import { jsxDeclareComponent, QRL } from \\"@builder.io/qwik\\";

export const Todos = jsxDeclareComponent(QRL\`ui:/Todos_template\`, \\"todos\\");
",
      "path": "Todos.ts",
    },
    Object {
      "contents": "import { Component, QRL } from \\"@builder.io/qwik\\";

export class TodosComponent extends Component<any, any> {
  static $templateQRL = \\"ui:/Todos_template\\";

  $newState() {
    return {}; // TODO
  }
}
",
      "path": "Todos_component.ts",
    },
    Object {
      "contents": "import { injectEventHandler, provideEvent, markDirty } from \\"@builder.io/qwik\\";
import { TodosComponent } from \\"./Todos_component.js\\";

export default injectEventHandler(
  TodosComponent,
  provideEvent(),
  async function (this: TodosComponent, event: Event) {
    const newValue = !todosState.allCompleted;

    for (const todoItem of todosState.todos) {
      todoItem.completed = newValue;
    }
  }
);
",
      "path": "Todos_onInputClick.ts",
    },
  ],
}
`;
